Add IDE-style sequence editor and polish project workbench (Phase 1)
## Sequence editor (new)
- SequenceEditorPane: BentoFX-native dock leaf for editing sequences,
  activated via replaceContainer() so Explorer/Inspector sidebars stay fixed
- SequenceEditSession: full undo/redo (100-entry bounded history) with
  insert/remove/duplicate segment and per-step waveform mutation
- SegmentTimelineCanvas: proportional segment strip with B₁ sparklines,
  click-to-select, right-click context menu
- WaveformEditorCanvas: 5-channel stacked lane display (B₁x, B₁y, Gx, Gz,
  RF Gate) with hardware limit markers, zero lines and μT/mT·m⁻¹ axis labels
- SequenceToolPalette: 40px icon-only vertical strip with tooltips; Phase 1
  actions (insert/delete/duplicate) live, drawing tools stubbed+disabled
- SequenceEditorIcons: hand-drawn 24×24 canvas icons per tool kind
- SequenceToolKind: 13-entry enum covering drawing, action and composite tools
- WorkbenchController: installWorkspaceSwitching() listens to activeNodeId,
  calls showSequenceEditor()/showAnalysisWorkspace() via replaceContainer();
  contextual toolbar label; DELETE_SEQUENCE command registration
- PaneId.SEQUENCE_EDITOR added (pinned, excluded from Focus menu)
- CommandId.DELETE_SEQUENCE added

## UI polish
- StudioShell: keyboard accelerators on all menu items (⌘O/S/⇧S/I/R);
  "Promote to Sequence" removed from File menu (kept in Analysis)
- StudioIcons: colour-coded folder icons — purple for imports group,
  green for sequences group
- StudioSession: points.resetToDefaults() on startup (pre-loads POIs)
- ViewportViewModel: time cursor initialised to midpoint of range
- ExplorerPane: expanded-state preservation across tree rebuilds;
  suppressSelectionEvents flag; Tooltip on every cell; Delete Sequence item
- InspectorPane: full listener teardown on refresh to prevent leaks;
  "First/Last/Best Iteration" button labels; Delete button for sequences;
  promote fix — Inspector node preferred over workspace node
- ExplorerTree